package com.sytoss.edu.elevator.bom.enums;

public enum Direction {

    UPWARDS,
    DOWNWARDS
}
