package com.sytoss.edu.elevator.bom.enums;

public enum DoorState {

    OPENED,
    CLOSED
}
