package com.sytoss.edu.elevator.bom.enums;

public enum EngineState {

    GOING_UP,
    GOING_DOWN,
    STAYING
}
